tests/ui/missing-body.stderr
error: unnecessary trailing semicolon
  --> $DIR/missing-body.rs:14:22
   |
14 |     async fn f(&self);
   |                      ^ help: remove this semicolon
   |
note: the lint level is defined here
  --> $DIR/missing-body.rs:1:9
   |
1  | #![deny(redundant_semicolons)]
   |         ^^^^^^^^^^^^^^^^^^^^
